[project]
name = "llm-transformer-notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "Medhat Usama"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.77.0,<2.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyterlab = "^4.4.2"

